# jellyclaw-engine

./: .dockerignore  .env.example  .gitignore  AGENTS-USED-IN-BUILD.md  AUTOBUILD-PHASES.md  AUTOBUILD-VERIFICATION.md  CHANGELOG.md  CLAUDE.md  COMPLETION-LOG.md  Caddyfile  DAEMON-DESIGN.md  DEPLOY.md  Dockerfile  MASTER-PLAN.md  OPENHANDS-PORT.md  README.md  ROADMAP.md  SOUL.md  STATUS.md  T6-04-DESIGN-BRIEF.md  T6-04-PLAN.md  T6-04-STARTUP.md  TIMELINE.md  WARP-LINKS.md  biome.json  fly.toml  index.html  jellyfish-spinner-spec.txt  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
ARCHIVE/: MASTER-PLAN-2026-04-14.md
dashboard/: .gitignore  CHANGELOG.md  DECISIONS.md  FAQ.md  HEALTHCHECK.md  INTEGRATION-CHECKLIST.md  ORCHESTRATION.md  README.md  ROOT.md  SCRIPTS.md  SMOKE-TEST.md  index.html  package.json  playwright.config.ts  start.sh  stop.sh  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  Engine.entitlements  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
docs/: ARCHITECTURE.md  CHROME-MCP-INTEGRATION-PLAN.md  GETTING-STARTED.md  WEB-SEARCH-AND-BROWSER-MCP-PLAN.md  agents.md  browserbase-setup.md  chrome-setup.md  cli.md  daemon.md  deploy-secrets.md  desktop.md  development.md  event-stream.md  hooks.md  http-api.md  install.md  library.md  mcp.md  permissions.md  playwright-setup.md  plugins.md  providers.md  rate-limit-and-scrub.md  (+5 more)
(+895 files in other folders)
